# mails-assistant

./: .env.development.sample  .env.production.sample  .gitignore  README.md  entrypoint.sh  pyproject.toml  requirements.txt
mails_assistant/: __init__.py  ai.py  exception_handlers.py  main.py  middleware.py
mails_assistant/routes/: auth.py  gmail.py  prompt.py
mails_assistant/utils/: google.py
src/: __init__.py  _logger.py  _middleware.py  _utils.py  main.py
